# llm-hanabi

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: create_mutagen_sync.sh
src/: hanabi  manual_game.py  run_game.py  symmetry_convention_injector.py  temp.py  testtraining.py
src/agents/: __init__.py  agent.py  agent_builder.py  base_llm_agent.py  llm_agent.py  llm_model_wrapper.py  manual_agent.py  mappings.py  old_llm_agent.py  self_verif_llm_agent.py  simple_llm_agent.py
src/agents/prompt_text/: self_verif_prompt_text.py  simple_prompt_text.py
src/config/: ippo_ff_hanabi.yaml
src/conventions/: HR-P0.json
src/scripts/: symmetry_conventions.sh
