[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['JaxMARL/jaxmarl*']

[tool.setuptools.dynamic]
version = {attr = "JaxMARL/jaxmarl.__version__"}
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements/requirements-dev.txt"] }, qlearning = { file = ["requirements/requirements-qlearning.txt"] }}

[project]
name = "llm-hanabi"
readme = "README.md"
description = "LLMs with Hanabi"
authors = [
    {name = "Ravi Hammond", email = "ravihammond@gmail.com"},
  ]
dynamic = ["version", "dependencies", "optional-dependencies"]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/ravihammond/llm-hanabi"
"Bug Tracker" = "https://github.com/ravihammond/llm-hanabi/issues"
