[project]
name = "llm-hanabi"
# Set a static version since we are not reading it from the module
version = "0.1.0"
description = "LLM Hanabi Coordination"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Ravi Hammond", email = "ravi.hammond@reuben.ox.ac.uk" }]
# List the core dependencies (update versions as needed)
dependencies = [
  "jax>=0.2.12",
  "jaxlib>=0.1.67",
  "numpy>=1.19.0",
  "scipy>=1.5.0",
  "jaxmarl",
  "backoff",
  "openai",
  "dotenv",
  "easydict",
]

[project.optional-dependencies]
# These extras come from the original repo’s configuration.
algs = [
  "optax",
  "distrax",
  "flashbax==0.1.0",
  "wandb",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pettingzoo>=1.24.3",
  "tqdm>=4.66.0",
]
dev = [
  "pytest",
  "pygame",
  "pytest>=6.0.0",
  "black",
  "flake8",
  "isort",
  "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
